dark mode QA fixes

--- a/src/scss/_vanilla-overrides.scss
+++ b/src/scss/_vanilla-overrides.scss
@@ -57,4 +57,8 @@ body.is-dark {
   .p-button--link {
     color: var(--vf-color-text--default)
   }
+
+  a:visited:not([class]), a.p-link__chevron, a[class=""]:visited {
+    color: var(--vf-color-link-default)
+  }
 }
